[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/new_theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.639216, 0.623529, 0.490196 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.133333, 0.639216, 0.623529, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.262745, 0.258824, 0.258824, 0.392157 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.639216, 0.623529, 0.490196 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/margin_right = 200
custom_constants/margin_top = 75
custom_constants/margin_left = 200
custom_constants/margin_bottom = 125

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 200.0
margin_top = 75.0
margin_right = 824.0
margin_bottom = 475.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 624.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 10
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="OptionButton" type="OptionButton" parent="CenterContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_top = 10.0
margin_right = 574.0
margin_bottom = 70.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 1 )

[node name="MarginContainer5" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 624.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 10
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="OptionButton2" type="OptionButton" parent="CenterContainer/VBoxContainer/MarginContainer5"]
margin_left = 50.0
margin_top = 10.0
margin_right = 574.0
margin_bottom = 70.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 624.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 10
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_top = 10.0
margin_right = 574.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 1 )
placeholder_text = "Input FEN"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 624.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 10
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="reset FEN" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_top = 10.0
margin_right = 574.0
margin_bottom = 70.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "Reset FEN"

[node name="MarginContainer4" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 624.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 10
custom_constants/margin_left = 50
custom_constants/margin_bottom = 10

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer4"]
margin_left = 50.0
margin_top = 10.0
margin_right = 574.0
margin_bottom = 70.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "Return"

[connection signal="item_selected" from="CenterContainer/VBoxContainer/MarginContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/MarginContainer5/OptionButton2" to="." method="_on_OptionButton2_item_selected"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/MarginContainer2/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_entered" from="CenterContainer/VBoxContainer/MarginContainer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/MarginContainer3/reset FEN" to="." method="_on_reset_FEN_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/MarginContainer4/Button" to="." method="_on_Button_button_up"]
